--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
